--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./app.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "apollo-server-express": "^2.15.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^15.1.0",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.9.20"
+    "graphql": "^15.3.0",
+    "mongoose": "^5.9.20",
+    "nodemon": "^2.0.4",
+    "sequelize": "^6.3.1"
   }
 }
